--- a/_posts/2018-04-17-test.md
+++ b/_posts/2018-04-17-test.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Published Post Test"
 date:   2018-04-17 18:26:11 +0100
 categories: test post publish
+tags: [ tag1, tag2, tag3]
 ---
 
 From minima template:
